style.css
body {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: black;
}

.calculator-background {
    display:flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    background-color: darkgrey;
    width: 400px;
    height: 500px;
    row-gap: 1%;
    border-radius: 25px;
    border-style: solid;
    border-color: darkslategray;
    border-width: 10px;
}

.result-window {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: end;
    background-color: rgba(58, 75, 58, 0.849);
    color: lightgray;
    border-style: solid;
    border-width: 2px;
    border-radius: 10px;
    border-color: black;
    width: 90%;
    height: 45%;
    font-family: "Digital-7", "Serif";
    overflow: scroll;
}

.result, .operation {
    display: flex;
    align-items: center;
    justify-content: right;
    padding-left: 2%;
    padding-right: 2%;
    text-align: right;
    width: 94%;
    overflow: scroll;
    text-overflow: clip;
}

.result {
    margin-bottom: -5%;
    font-size: 75px;
    font-weight: bold;
    height: 45%;
    max-height: 45%;
}

.operation {
    font-size: 40px;
    height: 30%;
    max-height: 45%;
}

.button-container {
    display: flex;
    flex-direction: column;
    width: 90%;
    height: 45%;
}

.button-row {
    display: flex;
    height: 20%;
}

button {
    width: 100%;
    display: block;
    border-radius: 5px;
    font-family: "Digital-7", "Helvetica", "sans-serif";
    font-size: 25px;
}

#clear, #undo {
    font-size: xx-large;
    font-weight: bold;
    font-family: "Digital-7", "Helvetica", "sans-serif";
}

#clear {
    background-color: darkred;
    color: white;
}

@font-face {
    font-family: "Digital-7";
    src: url(fonts/digital-7.ttf);
}

